// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CatalogItemBadge Cover size 1`] = `
<View
  style={
    Object {
      "alignSelf": "flex-start",
      "backgroundColor": "#FFFFFF",
      "borderBottomEndRadius": 12,
      "paddingHorizontal": 8,
      "paddingVertical": 4,
    }
  }
>
  <Text
    style={
      Array [
        Object {},
        Array [
          Object {
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "color": "#00B0FF",
            "fontSize": 12,
          },
        ],
      ]
    }
    testID="badge"
  >
    Foo bar
  </Text>
</View>
`;

exports[`Storyshots CatalogItemBadge Default 1`] = `
<View
  style={
    Object {
      "alignSelf": "flex-start",
      "backgroundColor": "#FFFFFF",
      "borderBottomEndRadius": 12,
      "paddingHorizontal": 8,
      "paddingVertical": 4,
    }
  }
>
  <Text
    style={
      Array [
        Object {},
        Array [
          Object {
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "color": "#00B0FF",
            "fontSize": 10,
          },
        ],
      ]
    }
    testID="badge"
  >
    Foo bar
  </Text>
</View>
`;
